tests/generated/036_fix_ampersands.out
Fatal error: Call to undefined method DtlIter::fix_ampersands() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/036_fix_ampersands.php on line 4